--- a/.gitmodules
+++ b/.gitmodules
@@ -1,24 +1,25 @@
 [submodule "bundle/nerdtree"]
-    path = bundle/nerdtree
-      url = git://github.com/scrooloose/nerdtree.git
-        ignore = dirty
+      path = bundle/nerdtree
+            url = git://github.com/scrooloose/nerdtree.git
+                    ignore = dirty
 [submodule "bundle/vim-rails"]
-    path = bundle/vim-rails
-      url = git://github.com/tpope/vim-rails.git
-        ignore = dirty
-[submodule "bundle/fugitive"]
-    path = bundle/fugitive
-      url = git://github.com/tpope/vim-fugitive.git
-        ignore = dirty
-[submodule "bundle/rake"]
-    path = bundle/rake
-      url = git://github.com/tpope/vim-rake.git
-        ignore = dirty
+      path = bundle/vim-rails
+            url = git://github.com/tpope/vim-rails.git
+                    ignore = dirty
+[submodule "bundle/vim-fugitive"]
+      path = bundle/vim-fugitive
+            url = git://github.com/tpope/vim-fugitive.git
+                    ignore = dirty
+[submodule "bundle/vim-rake"]
+      path = bundle/vim-rake
+            url = git://github.com/tpope/vim-rake.git
+                    ignore = dirty
 [submodule "bundle/vim-bundler"]
-    path = bundle/rake
-      url = git://github.com/tpope/vim-bundler.git
-        ignore = dirty
+      path = bundle/vim-bundler
+            url = git://github.com/tpope/vim-bundler.git
+                    ignore = dirty
 [submodule "bundle/vim-ruby"]
-    path = bundle/rake
-      url = git://github.com/vim-ruby/vim-ruby.git
-        ignore = dirty
+      path = bundle/vim-ruby
+            url = git://github.com/vim-ruby/vim-ruby.git
+                    ignore = dirty
+
